update issues 02 da viet respon mobile nha sang

--- a/pub-asset/css/css-bt02.css
+++ b/pub-asset/css/css-bt02.css
@@ -40,3 +40,7 @@ ul .list-circle{
 .no-mg{
 	margin:0px;
 }
+
+.margin15{
+	margin:0px 15px 0px 15px;
+}
